docs/v5.6.1/_sources/gallery/experiment/sphere/coupling_vs_wavelength.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/coupling_vs_wavelength.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_coupling_vs_wavelength.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_coupling_vs_wavelength.py:


Sphere: Coupling vs wavelength
==============================

.. GENERATED FROM PYTHON SOURCE LINES 5-54



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_coupling_vs_wavelength_001.png
   :alt: coupling vs wavelength
   :srcset: /gallery/experiment/sphere/images/sphx_glr_coupling_vs_wavelength_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    BK7            sellmeier  specs/SCHOTT-optical/P-BK7
    aluminium      tabulated  main/Al/Rakic
    fused_silica   sellmeier  main/SiO2/Malitson
    gold           tabulated  main/Au/Olmon-ev
    silver         tabulated  main/Ag/Johnson
    water          sellmeier  main/H2O/Daimon-19.0C

    [<matplotlib.lines.Line2D object at 0x7fe30c17af90>, <matplotlib.collections.FillBetweenPolyCollection object at 0x7fe30c179d50>, <matplotlib.lines.Line2D object at 0x7fe30c882c50>, <matplotlib.collections.FillBetweenPolyCollection object at 0x7fe30c882a10>, <matplotlib.lines.Line2D object at 0x7fe30c25fa90>, <matplotlib.collections.FillBetweenPolyCollection object at 0x7fe30c25c290>, <matplotlib.lines.Line2D object at 0x7fe30ea40650>, <matplotlib.collections.FillBetweenPolyCollection object at 0x7fe30eaaead0>]





|

.. code-block:: Python

    import numpy as np
    from PyMieSim import (
        ureg,
        CoherentModeSet,
        SphereSet,
        GaussianSet,
        PolarizationSet,
        Experiment,
        print_available,
        SellmeierMaterial,
        SellmeierMedium,
    )


    print_available()

    polarization_set = PolarizationSet(
        angles=[0.0] * ureg.degree,
    )

    source = GaussianSet(
        wavelength=np.linspace(950, 1050, 200) * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.2],
    )

    scatterer = SphereSet(
        diameter=np.linspace(1400, 1500, 10) * ureg.nanometer,
        material=[SellmeierMaterial(material_name="BK7")],
        medium=[1],
    )

    detector = CoherentModeSet(
        mode_number=["LP11"],
        numerical_aperture=[0.05, 0.03],
        phi_offset=[-180] * ureg.degree,
        gamma_offset=[0] * ureg.degree,
        polarization_filter=[0, 90] * ureg.degree,
        rotation=[0] * ureg.degree,
        sampling=[300],
        medium=[SellmeierMedium(material_name="water")]
    )

    experiment = Experiment(scatterer_set=scatterer, source_set=source, detector_set=detector)

    result = experiment.get("coupling")

    result.plot(x="source:wavelength", std="scatterer:diameter")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.804 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_coupling_vs_wavelength.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: coupling_vs_wavelength.ipynb <coupling_vs_wavelength.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: coupling_vs_wavelength.py <coupling_vs_wavelength.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: coupling_vs_wavelength.zip <coupling_vs_wavelength.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
